--- a/netlify.toml
+++ b/netlify.toml
@@ -5,4 +5,4 @@
 [build.environment]
   HUGO_VERSION = "0.72.0"
   HUGO_THEME = "repo"
-  HUGO_BASEURL = "https://visualizinghockey.com"
+  HUGO_BASEURL = "visualizinghockey.com"
